--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,10 +34,11 @@ button {
 }
 
 /* header */
-@import url(./components/headers/header.css);
+@import url('./components/headers/header.css');
 
 /* products */
+@import url('./components/mainpages/products/products.css');
 
-@import url(./components/mainpages/products/products.css)
-
+/* detail product */
+@import url('./components/mainpages/detailProduct/detailProduct.css');
 
