Add login/register form and preloader

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,3 +42,6 @@ button {
 /* detail product */
 @import url('./components/mainpages/detailProduct/detailProduct.css');
 
+/* login/register */
+@import url('./components//mainpages//auth/login.css');
+
