try to change UserApi as userAPI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,6 @@ button {
 /* cart */
 @import url('./components/mainpages/cart/cart.css');
 
+/* history */
+@import url('./components/mainpages/history/history.css');
+
