create product page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,3 +54,6 @@ button {
 /* categories  */
 @import url('./components/mainpages/categories/categories.css');
 
+/* create products */
+@import url('./components/mainpages/createProduct/createProduct.css');
+
